# GarminFit

./: CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  version.txt
